# schizoid

./: .gitignore  Cargo.toml  LICENSE  flake.nix  package.nix
.github/workflows/: cachix-install-nix-action.yml
src/: main.rs
