[package]
name = "schizoid"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
itertools = "0.14.0"
log = "0.4.29"
mcping = { git = "https://github.com/chilipizdrick/mcping", features = ["tokio-runtime"] }
serenity = { version = "0.12.5" }
tokio = {version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.23"
